fixing overlap in the nav and main

--- a/website/forall.css
+++ b/website/forall.css
@@ -34,3 +34,7 @@ li a {
     text-align: center;
     padding: 10px 20px;
 }
+main {
+    position: relative;
+    top: auto;
+}
